*Empty MediaWiki Message*

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -9,7 +9,7 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 
 Üks' ei ole [[palakahad lugud|palakaz]] i eile [[palatomad lugud|palatoi]] lugu, toižin mureniži niiden luguiden teorijad.
 
-== Üks'-lugusanha sidotud vepsän muštatišed da ozoitesed ==
+== Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Ei kaht carid ühthe lidnha mülütagoi.''
