--- a/Päiväine.mw
+++ b/Päiväine.mw
@@ -12,13 +12,13 @@ Kaik om 26 000 vauktuzvot Päiväižen da [[Maidte]]n galaktikan keskusen keskes
 == Päiväižhe sidodud vepsän mustatišed ==
 ;Mustatišed
 <blockquote>
-* ''Ei päiväine ühtei ühtes čuraspäi pašta''.
+* ''Ei päiväine ühtei ühtes čuraspäi pašta.''
 * ''Kaikele radole pidab aig, aigata i päivoi ei pašta.''
-* ''Päiväine-ki ei ozaida paštta''.
+* ''Päiväine-ki ei ozaida paštta.''
 </blockquote>
 
 ;Virkeh
-* ''Ühtes päiväižes hatrad kuivaziba'' (edahaižen pol'ven heimolaižiš)
+* ''Ühtes päiväižes hatrad kuivaziba.'' (edahaižen pol'ven heimolaižiš)
 
 == Homaičendad ==
 <references />
