/* Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed */ +

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -20,7 +20,8 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 * ''Pu ei lankte ühtel painandal.''
 * ''Üht päd ei voi sötta.''
 * ''Ühtel sijal i kivi kazvahtub.''
-* ''Ühtes päiväižes hatrad kuivaziba.''
+* ''Ühtes päiväižes hatrad kuivaziba.'' (edahaižen pol'ven heimolaižiš)
+* ''Ühtespäi kaht ei linne.'' (ala anda vaudad lapsele)
 * ''Ühthe korvha mäneb, toižespäi lähteb.''
 * ''Üks' päskhaine kezad ei tege.''
 </blockquote>
