/* Kaks'-lugusanha sidotud vepsän muštatišed da ozoitesed */ +

--- a/2_(lugu).mw
+++ b/2_(lugu).mw
@@ -4,7 +4,7 @@
 == Lugun ičendad ==
 * Nece lugu om palatoi, jagamatoi.
 
-== Kaks'-lugusanha sidotud vepsän muštatišed da ozoitesed ==
+== Kaks'-lugusanha sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Ei kaht carid ühthe lidnha mülütagoi.''
@@ -12,6 +12,7 @@
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kaks' kondjad ühtes pezas ei voigoi eläda.''
 * ''Lapses om äi ližad: kalan sab da kaks' söb.''
+* ''Ühtespäi kaht ei linne.'' (ala anda vaudad lapsele)
 </blockquote>
 
 === Ozoitesed ===
