/* Heimolaižihe sidodud vepsän muštatišed */ +

--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -112,6 +112,7 @@
 * ''Meiden mind' linneb radon sijas.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
 * ''Poigas vähäd, tütres tühjad.''
+* ''Ühtes päiväižes hatrad kuivaziba.'' (edahaižen pol'ven heimolaižiš)
 </blockquote>
 
 [[Kategorii:Kanz]]
