--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -36,6 +36,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Mez' nimel ei elä, a radol.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
 * ''Tervhut ed osta.''
+* ''Verhan vargastad, ičeiž kadotad.''
 </blockquote>
 
 == Kacu mugažo ==
