/* Varišha sidotud vepsän muštatišed */ +

--- a/Variš.mw
+++ b/Variš.mw
@@ -30,7 +30,7 @@ Eläb Evropas i Päivlaskmaižes Azijas, sinantropine erik. Hibj om hahk, pä, s
 <blockquote>
 * ''Kohtha vaiše variš lendab.''
 * ''Ozaiteled haragole, a painad varišale.''
-* ''Variš hüppib, a küksta ei voi.''
+* ''Variš hüppib, a küksta ei voi.'' (ristitus, ken tahtoib tehta pahut, no ei voi)
 * ''Variš varišale ei sil'mad n'oki.''
 </blockquote>
 
