/* Ristithu sidodud vepsän muštatišed */ +

--- a/Ristit.mw
+++ b/Ristit.mw
@@ -35,6 +35,7 @@ Ristitun erigoičijad päpirdad oma püštoiged kävund, šingotadud päaivod, m
 * ''Sogedale kulub, a kurdhele nägub.''
 * ''Uradoid ei semekoi, ei rahngoi, iče kazdas.''
 * ''Vanhemb norel ei küzuškande.''
+* ''Variš hüppib, a küksta ei voi.'' (ristitus, ken tahtoib tehta pahut, no ei voi)
 * ''Äi om hüvid, da vähä om armhid.''
 </blockquote>
 
