/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -21,6 +21,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 <blockquote>
 * ''Eci, kut leibäd ecid, siloi löudad.''
 * ''Edemba hutid, lähemba otad.''
+* ''Ei elokaz om, kudamb elon sab, a elokaz om, kudamb varjoičeb.''
 * ''Ei katil keita, a emäg.''
 * ''Ei küzugoi, teravas-ik radab, küzutas, ken radab.''
 * ''Elokahanke ei sa suttäs, vägevanke ei ca borcuidas.''
