/* Lehmähä sidodud vepsän muštatišed da ozoitesed */ +

--- a/Lehm.mw
+++ b/Lehm.mw
@@ -47,6 +47,7 @@ Edel vazan sündutandad lupsandad ei ole 45..60 päivest. Maidnikan laktacijan p
 <blockquote>
 * ''Ak da lehm, mužik da hebo.''
 * ''Ei ole kondi vär, a lehm om.''
+* ''Hüvä vaza kaht emid imeb, a paha ühten-ki kadotab.''
 * ''Kacta kuti lehm udehe kašlihe.''
 * ''Lehm tanhal — söm pertiš.''
 * ''Putub kondjale lehm, ka siloi i kargaidab.''
