--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -30,6 +30,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Kaht jänišad küksendeled, ni üht ed tabada.''
 * ''Kebnas tuli, kebnas läksi.''
 * ''Kenen tavar, ka se i arvon paneb.''
+* ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Kuverz' taht rada, hüvähä ei mäne.''
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
