--- a/Sport.mw
+++ b/Sport.mw
@@ -9,6 +9,12 @@ Kaikiš amuižembad sportan toižendad oma [[borcuind]] (kuvad magikaroiš kaike
 
 Amuižes Grekanmas sportansuguiden sur' erazvuiččend oli olmas jo. Niiden keskes kaikiš lujemb šingotadud oliba borcuindan toižendad, [[joksend]], diskan čudand i voibuižed korjil. Sodakul'tur i sodačomamaht veiba sportan šingotesele amuižes mirus. Keskaigaline religijan leviganduz sen hengeliženke praktikanke vei lanktushe fizišt kul'turad Evropadme (hristanuskond) i Kitaiš (konfucianižuz). Sportlikundan toine libund zavodihe medicinižen tedon šingotesenke 19. voz'sadan keskes.
 
+== Sportha sidodud vepsän muštatišed ==
+<blockquote>
+* ''Elokahanke ei sa suttäs, vägevanke ei ca borcuidas.''
+* ''Venujad ei lögoi.''
+</blockquote>
+
 == Kacu mugažo ==
 * [[Olimpižed vändod]]
 * [[Fizine kul'tur]]
