/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -37,6 +37,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Lämoipalod mustoil ed sambuta.''
 * ''Mez' nimel ei elä, a radol.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
+* ''Seibhid eile, ka aid vereb.''
 * ''Tervhut ed osta.''
 * ''Verhan vargastad, ičeiž kadotad.''
 </blockquote>
