--- a/Piter.mw
+++ b/Piter.mw
@@ -148,9 +148,14 @@ WinterPalace.jpg|[[Tal'veline pert'kulu]]<br/>([[Ermitaž|Ermitaž-muzei]])
 * [[Malafejev Väčeslav|Väčeslav Malafejev]] (sünd. 1979) — Venäman futbolist-verainik.
 * [[Mgoän Zarifa|Zara]] (sünd. 1983) — Venäman pajatai.
 
-== Piterihe sidotud vepsän ozoitez ==
+== Piterihe sidodud vepsän muštatiž i ozoitez ==
+;Mustatišed
 <blockquote>
-Piteriš pino vereb, a mijale kulub (jumalanjuru).
+* ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
+</blockquote>
+;Ozoitez
+<blockquote>
+* Piteriš pino vereb, a mijale kulub (jumalanjuru).
 </blockquote>
 
 == Homaičendad ==
