/* Piterihe sidodud vepsän muštatiž i ozoitez */

--- a/Piter.mw
+++ b/Piter.mw
@@ -149,7 +149,7 @@ WinterPalace.jpg|[[Tal'veline pert'kulu]]<br/>([[Ermitaž|Ermitaž-muzei]])
 * [[Mgoän Zarifa|Zara]] (sünd. 1983) — Venäman pajatai.
 
 == Piterihe sidodud vepsän muštatiž i ozoitez ==
-;Mustatišed
+;Mustatiž
 <blockquote>
 * ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
 </blockquote>
