--- a/10_(lugu).mw
+++ b/10_(lugu).mw
@@ -3,11 +3,10 @@
 == Lugun ičendad ==
 * Nece lugu om palakaz.
 
-== Kümne-lugusanha sidotud vepsän muštatiž ==
+== Kümne-lugusanha sidodud vepsän muštatiž ==
 <blockquote>
 * ''Mužik oli verdunu Piterin päle kümne vot, a Piter-se ei ni olend tenu.''
 </blockquote>
 
 {{stub}}
-
 [[Kategorii:Lugusanad]]
