/* Maižandushe sidodud vepsän muštatišed */ +

--- a/Maižanduz.mw
+++ b/Maižanduz.mw
@@ -61,6 +61,7 @@ Maižanduz mülüb [[agrotegimištkompleks]]ha i mülütab alemba kirjutadud pä
 == Maižandushe sidodud vepsän muštatišed ==
 <blockquote>
 * ''Ken rahnob, se i söb.''
+* ''Keväz'vihm kazvatab, sügüz'vihm kadotab.''
 * ''Min semendad, sen i rahnod.''
 </blockquote>
 
