/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -34,6 +34,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Korman ei käske.'' (rahoid ei ole)
 * ''Kuverz' taht rada, hüvähä ei mäne.''
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
+* ''Läksin nitmaha, dai vikatehen unohtin.''
 * ''Lämoipalod mustoil ed sambuta.''
 * ''Mez' nimel ei elä, a radol.''
 * ''Orjale polušk, radnikale poltin, mastarile rubl'.''
