--- a/Vänd.mw
+++ b/Vänd.mw
@@ -8,9 +8,9 @@ Vändon tundused da tärtused: materialižiden satusiden olmatomuz, südäiolend
 * forman mödhe: [[laudvändod]], [[azartvändod]], likundvändod, sportvändod, rol'vändod, lapsiden vändod, [[kompjuterižed vändod]].
 * südäiolendan mödhe: tedonandajad vändod, muzikvänd, azjaližed vändod, sportvändod, sodavändod.
 
-== Vändho sidotud vepsän muštatišed ==
+== Vändho sidodud vepsän muštatišed ==
 <blockquote>
-* ''Eile vändod – eile bobašt.''
+* ''Eile vändod — eile bobašt.''
 * ''Ezmäi rad, eskai vänd.''
 </blockquote>
 
