--- a/Bobaine.mw
+++ b/Bobaine.mw
@@ -6,6 +6,11 @@ Vändon kartte bobaižed bobuštadas [[lapsed|last]], vedatadas hänen tarkust i
 
 Erištadas bobaižid kävutadud materialan, igän i kazvatandznamoičendan mödhe.
 
+== Bobaižhe sidodud vepsän muštatiž ==
+<blockquote>
+* ''Eile vändod — eile bobašt.''
+</blockquote>
+
 == Homaičendad ==
 <references />
 
