/* Heimolaižihe sidodud vepsän muštatišed */ +

--- a/Heimolaižuz.mw
+++ b/Heimolaižuz.mw
@@ -107,10 +107,12 @@
 <blockquote>
 * ''Haugenpä — bobulin loun, ahvenanpä — anopen loun.''
 * ''Heimod om äi, söda ei kus.''
+* ''Hüvä vävu, da harvemba kävu.''
 * ''Hüväd susedad pahaze heimho ed vajehta.''
 * ''Ku mam om koirakaz, ka i tütar om hond.''
 * ''Meiden mind' linneb radon sijas.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
+* ''Poig lajib — libu päčile, vävu lajib — kacu, kus uks' om.''
 * ''Poigas vähäd, tütres tühjad.''
 * ''Ühtes päiväižes hatrad kuivaziba.'' (edahaižen pol'ven heimolaižiš)
 </blockquote>
