/* Ekonomikha sidodud vepsän muštatišed */ +

--- a/Ekonomik_(tedo).mw
+++ b/Ekonomik_(tedo).mw
@@ -32,6 +32,7 @@ Ekonomižen tedon funkcijad: tedonandai, praktine, endustusen, mail'mannägendan
 * ''Kenen tavar, ka se i arvon paneb.''
 * ''Kolijalpäi velgad ed ota.''
 * ''Korman ei käske.'' (rahoid ei ole)
+* ''Kut sä minei, muga i mä sinei.''
 * ''Kuverz' taht rada, hüvähä ei mäne.''
 * ''Küzuda eile vargastada. / Küzundas ei lögoi.''
 * ''Läksin nitmaha, dai vikatehen unohtin.''
