/* Sanha sidodud vepsän muštatišed */ +

--- a/Sana.mw
+++ b/Sana.mw
@@ -19,6 +19,7 @@ Klassificiruidas vaihid leksižen znamoičendan mödhe, sätas nimikirjutesid ez
 * ''Sanal voib mez' rikta.''
 * ''Sanoišpäi leibäd ed pašta.''
 * ''Sanub, kuti haugol pähä iškeb.''
+* ''Sarnaspäi vaihid ed roi.''
 * ''Sinun sana da jumalale korvha.''
 * ''Teravas sanutud, da ei teravas tehtud.''
 * ''Tämbäi kelastad, homen ei uskkoi.''
