/* Eländkodihe sidodud vepsän muštatišed */ +ozoitez

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -179,10 +179,16 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 Димитрова 70.JPG|Kaks'toštkümnežiruine eländpert' Venämas
 </gallery>
 
-== Eländkodihe sidodud vepsän muštatišed ==
+== Eländkodihe sidodud vepsän muštatišed i ozoitesed ==
+;Muštatišed
 <blockquote>
 * ''Pert' tehmata ei tule.''
 * ''Toižes kodiš i vet toižin kandištas.''
+</blockquote>
+
+;Ozoitez
+<blockquote>
+* Irdalpäi kromaine, pertišpäi bibloine. (parz' seinäs)
 </blockquote>
 
 == Kacu mugažo ==
