/* Eländkodihe sidodud vepsän muštatišed i ozoitesed */

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -179,7 +179,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 Димитрова 70.JPG|Kaks'toštkümnežiruine eländpert' Venämas
 </gallery>
 
-== Eländkodihe sidodud vepsän muštatišed i ozoitesed ==
+== Eländkodihe sidodud vepsän muštatišed da ozoitesed ==
 ;Muštatišed
 <blockquote>
 * ''Pert' tehmata ei tule.''
