--- a/Hab.mw
+++ b/Hab.mw
@@ -26,21 +26,21 @@ Pun tüvi om kolonnanvuitte ühthe metrhasai sankte, sase 35 metrad kortte. Elä
 == Kävutand ==
 Hab om levitadud [[pu (material)|pumaterial]]. Ištutadas eländpunktoiš dekorativižeks kazmuseks, sügüzel lehtišt om erazvuitte mujul. Änikoičeb sulakus i om mezikazmuseks sil aigal, [[mezjäižed]] ümbriratas urbiden kleid [[propolis]]aks. Ottas kävutandaha kored nahkoiden dubindsubstancijaks i samha [[pakuine muju|pakušt]] da [[vihand muju|vihandad]] mujud.
 
-== Habha sidotud vepsän tärtused ==
+== Habha sidodud vepsän tärtused ==
 * ''Dupl''' — tautatud hapaspäi lač.
 * ''Habaine pehk'' — hapanu südäimes hab.
 * ''Habaine pä'' — puine idol vai sangedpä, otuz.
 * ''Habik, habišt, habikišt, habžom'' — habaine mec.
 
-== Habha sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatišed ===
+== Habha sidodud vepsän muštatiž da ozoitez ==
+;Muštatiž
 <blockquote>
 * ''Koivuižes kandos habašt vezad ei kazva.''
 </blockquote>
 
-=== Ozoitesed ===
+;Ozoitez
 <blockquote>
-Pol'hebod, pol'habad (segl).
+* Pol'hebod, pol'habad (segl).
 </blockquote>
 
 == Kacu mugažo ==
