--- a/Hauged.mw
+++ b/Hauged.mw
@@ -32,15 +32,15 @@ Hen haug' nimitase ''haugič:uks''. Vaiše pohjoižed erikod södas niid (racion
 * ''Esox reicherti'' — [[Amuran haug']]
 * ''Esox americanus'' — [[Amerikalaine haug']]
 
-== Haughe sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatiž ===
+== Haughe sidodud vepsän muštatiž da ozoitez ==
+;Muštatiž
 <blockquote>
 * ''Haugenpä — bobulin loun, [[ahven|ahvenanpä]] — anopen loun.''
 </blockquote>
 
-=== Ozoitez ===
+;Ozoitez
 <blockquote>
-Haug' meres, a händ ülähän (kauh vezilačus).
+Haug' meres, a händ ülähän. (kauh vezilačus)
 </blockquote>
 
 == Homaičendad ==
