*Empty MediaWiki Message*

--- a/Hauged.mw
+++ b/Hauged.mw
@@ -16,7 +16,7 @@
  | ncbi         = 8009
  | range map    =
 }}
-'''Hauged''' ({{lang-la|Esox}}) om jogi[[kala]]. Se om [[Haugižed]]-sugukundan heim koumen kesken (edel 2016 vot oli üks'jäine). Om levitadud Evropas, Sibiriš, Pohjoižamerikas.
+'''Hauged''' ({{lang-la|Esox}}) om jogi[[kala]]. Se om [[Haugižed]]-sugukundan heim koumen kesken (edel 2016. vot oli üks'jäine). Om levitadud Evropas, Sibiriš, Pohjoižamerikas.
 
 == Ümbrikirjutand ==
 Täuz'kaznu haug' sase 1,8 metrhasai pitte, 32 kilogrammhasai vedutte. Emäčud oma järedamban ižačuid. Eläb koumekümnevoččehe igähäsai. Hibj om [[torped]]an kartte, hahkvihandan mujun polhe kirjav. Pä om nülak teravidenke hambhidenke. Korktas sijatud sil'mad ümbrikactas surt tahondad. Sel'gsuug i perzesuug sijadasoiš tagapalas händanno, se abutab histtä i otta pigut heredas, tehta tacindoid severzid-se ičeze hibjoid pitte.
