--- a/Meri.mw
+++ b/Meri.mw
@@ -8,8 +8,8 @@ Meri om tarbhaine vedamha jüguid, püdumha [[kala]]d da [[merenproduktad|meripr
 
 [[Mail'man merenpäiv]] praznuičese sügüz'kun lopnedalin ühtel päivišpäi, ohjastuz paneb sen datad jogo valdkundas.
 
-== Merhe sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatišed ===
+== Merhe sidodud vepsän muštatišed da ozoitesed ==
+;Muštatišed
 <blockquote>
 * ''Aig andab tünen meren, aig — vodajan venehen.''
 * ''Ei sil meri pagan ole, mi koirad randas lipitadas.''
@@ -17,9 +17,9 @@ Meri om tarbhaine vedamha jüguid, püdumha [[kala]]d da [[merenproduktad|meripr
 * ''Sorz meres, muna perskes.''
 </blockquote>
 
-=== Ozoitesed ===
+;Ozoitez
 <blockquote>
-Haug' meres, a händ ülähän (kauh vezilačus).
+Haug' meres, a händ ülähän. (kauh vezilačus)
 </blockquote>
 
 {{stub}}
