--- a/Vezi.mw
+++ b/Vezi.mw
@@ -18,7 +18,8 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Rougvezi'' — kostunu vezi kevädel.
 * ''Uhk, uhkvezi'' — lumenalaine vezi.
 
-== Vedhe sidodud vepsän muštatišed ==
+== Vedhe sidodud vepsän muštatišed da ozoitesed ==
+;Muštatišed
 <blockquote>
 * ''Aig astub, kuti vezi jokseb.''
 * ''Heinäd alemb, vet ülemb.''
@@ -32,6 +33,11 @@ Veden ninevuz om 0,9982 g/sm³, suladandlämuz om 0 C°, kehundtemperatur om lä
 * ''Vanh ak vinad job, laho pu vet vedab.''
 * ''Veden mödhe i vedehine löudase.''
 * ''Vezi karaižen löudab.''
+</blockquote>
+
+;Ozoitez
+<blockquote>
+* Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job. (küuduk)
 </blockquote>
 
 == Homaičendad ==
