--- a/Kül'bet'.mw
+++ b/Kül'bet'.mw
@@ -31,19 +31,19 @@ Vepsän küliš kül'betin alusenkived pandas laptha läz [[jogi|jogen]] randad,
 * [[Bahnik]] (armenine kül'bet')
 * [[Hammam]] (arabine i turkaine kül'bet')
 
-== Kül'bet'he sidotud vepsän tärtused ==
+== Kül'bet'he sidodud vepsän tärtused ==
 * ''Kül'bet'kart'' — tautadud kart veden lämbitusen täht.
 * ''Kül'bet'kibu, kül'bet'pagan, kül'bet'viga'' — läzund kül'betin jäl'ghe.
 
-== Kül'bet'he sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatišed ===
+== Kül'bet'he sidodud vepsän muštatiž da ozoitez ==
+=== Muštatiž ===
 <blockquote>
 * ''Kül'bet' kebnendab melen (mel't).''
 </blockquote>
 
-=== Ozoitesed ===
+=== Ozoitez ===
 <blockquote>
-Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job (küuduk).
+* Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job. (küuduk)
 </blockquote>
 
 == Irdkosketused ==
