/* Mecha sidodud vepsän muštatišed da ozoitesed */ +

--- a/Mec.mw
+++ b/Mec.mw
@@ -46,7 +46,8 @@
 
 === Ozoitesed ===
 <blockquote>
-Mecas koume mechašt, kezal i tal'vel ühted sädod (hong, kuz' da kadag).
+* Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
+* Mecha mäneb, kodihe kacub, kodihe tuleb, mecha kacub. (kašal' sel'gas)
 </blockquote>
 
 == Kacu mugažo ==
