--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -189,6 +189,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 ;Ozoitez
 <blockquote>
 * Irdalpäi kromaine, pertišpäi bibloine. (parz' seinäs)
+* Mecha mäneb, kodihe kacub, kodihe tuleb, mecha kacub. (kašal' sel'gas)
 </blockquote>
 
 == Kacu mugažo ==
