/* Eländkodihe sidodud vepsän muštatišed da ozoitesed */

--- a/Eländkodi.mw
+++ b/Eländkodi.mw
@@ -186,7 +186,7 @@ Vogelhaus Modell Eduard 4.JPG|Lindpertiine todesižen küläkodin kartte
 * ''Toižes kodiš i vet toižin kandištas.''
 </blockquote>
 
-;Ozoitez
+;Ozoitesed
 <blockquote>
 * Irdalpäi kromaine, pertišpäi bibloine. (parz' seinäs)
 * Mecha mäneb, kodihe kacub, kodihe tuleb, mecha kacub. (kašal' sel'gas)
