--- a/Lambaz.mw
+++ b/Lambaz.mw
@@ -33,7 +33,7 @@ Täuz'kaznuded ižačud oleldas 70..160 kg (rekord 247,2 kg), emäčud 45..100 k
 
 Kävutadas villad karvaspäi, [[lambazliha|lihad]], [[maid]]od (tehmaha [[brinz]]ad), razvad i [[kezi|ket]]; ottas kaclendtegoihe model'organizmikš (oz., Dolli-lambhaine).
 
-== Lambhaze sidotud vepsän tärtused ==
+== Lambhaze sidodud vepsän tärtused ==
 * ''Baši-baši, čke-čke'' — sanad kucumha lambhid.
 * ''Keričimed'' — raudad lambhid keričemha.
 * ''Kezi'' — lambaznahk.
@@ -41,15 +41,15 @@ Kävutadas villad karvaspäi, [[lambazliha|lihad]], [[maid]]od (tehmaha [[brinz]
 * ''Lambaznik'' — lambhiden pidai.
 * ''Tal'vill'' — keritud kevädel lambazvill.
 
-== Lambhaze sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatišed ===
+== Lambhaze sidodud vepsän muštatiž da ozoitez ==
+=== Muštatiž ===
 <blockquote>
 * ''Armaz kuti hahk lambaz verhas läväs.''
 </blockquote>
 
-=== Ozoitesed ===
+=== Ozoitez ===
 <blockquote>
-Iče Timoi karvakaz, kauhtanaine villakaz (lambaz).
+* Iče Timoi karvakaz, kauhtanaine villakaz. (lambaz)
 </blockquote>
 
 == Homaičendad ==
