--- a/Lävä.mw
+++ b/Lävä.mw
@@ -3,6 +3,11 @@
 
 Tehtas parzišpäi tobjimalaz, keskustal pertišpäi (vai sen elämižsijaspäi ühten katusen al ende) gigijenha näht. Lävän päfunkcii om živatoiden kaičend vilud i sadegid vaste.
 
+== Lävähä sidodud vepsän muštatiž ==
+<blockquote>
+* ''Armaz kuti hahk lambaz verhas läväs.''
+</blockquote>
+
 == Irdkosketused ==
 * [http://vepsian.krc.karelia.ru/text/?text_id=192 Kut tegiba rihen, aitan i lävän // Vepsän kelen korpus. — #188.]
 
