--- a/4_(lugu).mw
+++ b/4_(lugu).mw
@@ -6,9 +6,8 @@
 
 == Nell'-lugusanha sidodud vepsän ozoitesed ==
 <blockquote>
-Nell' vellest ühten katusen al seištas (laud).
-
-Nell' vellest ühten šläpan al seištas (laudan jaugad).
+* Nell' vellest ühten katusen al seištas. (laud)
+* Nell' vellest ühten šläpan al seištas. (laudan jaugad)
 </blockquote>
 
 == Mel'hetartuižed faktad ==
