/* Kudmaižhe sidotud vepsän muštatiž i ozoitez */

--- a/Kudmaine.mw
+++ b/Kudmaine.mw
@@ -9,7 +9,7 @@ Minimaline keskust Man i Kudmaižen keskes oleskeleb 363 104 km, kaikiš pidemb 
 
 Kudmaižen fazad: ližaku vai üläku (ezmäine nelländez), täuz'kudan' (täuz', ünäine kudmaine), alaku, uz' ku.
 
-== Kudmaižhe sidotud vepsän muštatiž i ozoitez ==
+== Kudmaižhe sidodud vepsän muštatiž i ozoitez ==
 === Muštatiž ===
 <blockquote>
 * ''Udele kudmaižele uded [[sä]]d-ki.''
@@ -17,7 +17,7 @@ Kudmaižen fazad: ližaku vai üläku (ezmäine nelländez), täuz'kudan' (täuz
 
 === Ozoitez ===
 <blockquote>
-Kehker ku kudmaine, viher ku vast (nagriž).
+* Kehker ku kudmaine, viher ku vast. (nagriž)
 </blockquote>
 
 == Kacu mugažo ==
