/* Vihandha mujuhu sidotud vepsän ozoitez */

--- a/Vihand_muju.mw
+++ b/Vihand_muju.mw
@@ -143,9 +143,9 @@ Fail:Limette.jpg|[[Laim]]an plodud
 Fail:Yünnan-Jadeit - China.jpg|[[Žadeit]]
 </gallery></center>
 
-== Vihandha mujuhu sidotud vepsän ozoitez ==
+== Vihandha mujuhu sidodud vepsän ozoitez ==
 <blockquote>
-Kehker ku kudmaine, viher ku vast (nagriž).
+* Kehker ku kudmaine, viher ku vast. (nagriž)
 </blockquote>
 
 == Homaičendad ==
