--- a/Nagriž.mw
+++ b/Nagriž.mw
@@ -43,15 +43,15 @@ Nagrhen sötmižsortad nimitasoiš [[turneps]]aks.
 * ''Paštikaine, paštikaz'' — pašttud nagriž.
 * ''Repoi'' — pašttud vai hauttud nagrhen südäivezi, vai vas nagrhespäi.
 
-== Nagrheze sidotud vepsän muštatišed da ozoitesed ==
-=== Muštatišed ===
+== Nagrheze sidotud vepsän muštatiž da ozoitez ==
+=== Muštatiž ===
 <blockquote>
 * ''Ei karged nagriž ezmäižeks hapne.''
 </blockquote>
 
-=== Ozoitesed ===
+=== Ozoitez ===
 <blockquote>
-Kehker ku kudmaine, viher ku vast (nagriž).
+* Kehker ku kudmaine, viher ku vast. (nagriž)
 </blockquote>
 
 == Homaičendad ==
