--- a/Nagriž.mw
+++ b/Nagriž.mw
@@ -32,7 +32,7 @@ Fail:Malselvneper.JPG|<small>Nagrhen jured</small>
 
 Nagrhen sötmižsortad nimitasoiš [[turneps]]aks.
 
-== Nagrheze sidotud vepsän tärtused ==
+== Nagrheze sidodud vepsän tärtused ==
 * ''Babu'' — kuivatud nagrhen haukuine (vai kartohkan).
 * ''Haudad, haudnikad'' — hauttud nagriž.
 * ''Haudpirg'' — pirg hauttud nagrhenke.
@@ -43,7 +43,7 @@ Nagrhen sötmižsortad nimitasoiš [[turneps]]aks.
 * ''Paštikaine, paštikaz'' — pašttud nagriž.
 * ''Repoi'' — pašttud vai hauttud nagrhen südäivezi, vai vas nagrhespäi.
 
-== Nagrheze sidotud vepsän muštatiž da ozoitez ==
+== Nagrheze sidodud vepsän muštatiž da ozoitez ==
 === Muštatiž ===
 <blockquote>
 * ''Ei karged nagriž ezmäižeks hapne.''
