--- a/Nagriž.mw
+++ b/Nagriž.mw
@@ -25,9 +25,9 @@ Ottihe kul'turiviruimha enamba 40 voz'sadad tagaz. Kodima — [[Päivlaskmaine A
 Jur' kazvab sanktaks, südäin oleleb pakuine vai vauged. Jur'lehtesed oma järedad. Änikoičii seikh kazvab kahtel vodel vai sil-žo vodel ku ištutihe värin, seikh om korged i om äi lehtesid. Jagadas aigaližhe i möhäižhe, möhembaine kožub varha tal'veks. Voib kazvatada aigaližen nagrhen kaks' satust vodes.
 
 <center><gallery widths=180 heights=90>
-Fail:Brassica rapa (xndr).jpg|<small>Nagrhen änikod</small>
-Fail:Brassicarapa.jpg|<small>Nagrhen semned</small>
-Fail:Malselvneper.JPG|<small>Nagrhen jured</small>
+Brassicarapa.jpg|<small>Nagrhen semned</small>
+Brassica rapa (xndr).jpg|<small>Nagrhen änikod</small>
+Malselvneper.JPG|<small>Nagrhen jured</small>
 </gallery></center>
 
 Nagrhen sötmižsortad nimitasoiš [[turneps]]aks.
