/* Kaks'-lugusanha sidodud vepsän muštatišed da ozoitesed */

--- a/2_(lugu).mw
+++ b/2_(lugu).mw
@@ -17,9 +17,9 @@
 
 === Ozoitesed ===
 <blockquote>
-Kaks' vellest läheten elädas, üks' te om keskes (sil'mad).<br />
-Kaks' vellest päliči tes elädas, toine tošt ei nähkoi (sil'mad).<br />
-Penikaižes bučuižes kahtejitte vin (muna).
+* Kaks' vellest läheten elädas, üks' te om keskes. (sil'mad)
+* Kaks' vellest päliči tes elädas, toine tošt ei nähkoi. (sil'mad)
+* Penikaižes bučuižes kahtejitte vin. (muna)
 </blockquote>
 
 == Kelenvänd ==
