/* Üks'-lugusanha sidodud vepsän muštatišed da ozoitesed */

--- a/1_(lugu).mw
+++ b/1_(lugu).mw
@@ -28,8 +28,9 @@ Miččen taht lugun äikerdoičend ühteks andab sidä-žo lugud, jagamine ühte
 
 === Ozoitesed ===
 <blockquote>
-Nell' vellest ühten katusen al seištas (laud).<br/>
-Nell' vellest ühten šläpan al seištas (laudan jaugad).
+* Kaks' vellest läheten elädas, üks' te om keskes. (sil'mad)
+* Nell' vellest ühten katusen al seištas. (laud)
+* Nell' vellest ühten šläpan al seištas. (laudan jaugad)
 </blockquote>
 
 == Kelenvänd ==
