/* Päčihe sidodud vepsän muštatišed da ozoitesed */ +

--- a/Päč.mw
+++ b/Päč.mw
@@ -85,11 +85,12 @@ Ku pertiš om karzin, se päč om seibhiš. Läz päčid om karzinlaud (karzinla
 
 === Ozoitesed ===
 <blockquote>
-* Čep' čep'he i lop päčhe (vorenc — paličad seinäspäi päčihesai).
-* Lehm seižub tanhal, sar'ved irdal (päč lämptäb).
-* Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job (küuduk).
-* Om pertiš kondi, ken pert'he tulob, kaikuččele andab kät (päč).
-* Ukoine libub päčile, korond perskes (kaži).
+* Čep' čep'he i lop päčhe. (vorenc — paličad seinäspäi päčihesai)
+* Čuhkab, čahkab pimedas pihkus, komedas kor'bes. (taigin päčil)
+* Lehm seižub tanhal, sar'ved irdal. (päč lämptäb)
+* Must härgaine om lujas joll'akaz, hot' äjak vet anda, ka kaiken job. (küuduk)
+* Om pertiš kondi, ken pert'he tulob, kaikuččele andab kät. (päč)
+* Ukoine libub päčile, korond perskes. (kaži)
 </blockquote>
 
 == Galerei ==
