--- a/Mec.mw
+++ b/Mec.mw
@@ -46,6 +46,7 @@
 
 === Ozoitesed ===
 <blockquote>
+* Čuhkab, čahkab pimedas pihkus, komedas kor'bes. (taigin päčil)
 * Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
 * Mecha mäneb, kodihe kacub, kodihe tuleb, mecha kacub. (kašal' sel'gas)
 </blockquote>
