--- a/Vrilissii.mw
+++ b/Vrilissii.mw
@@ -15,10 +15,12 @@
 }}
 '''Vrilissii''' ({{lang-el|Βριλήσσια}}) om lidn [[Grekanma]]n keskuzpalas. Se om [[Afinad|Afinoiden]] pohjoine ezilidn, mülüb [[Attik]]-agjaha.
 
+== Istorii ==
 Eländpunktan aluz om pandud vl 1930 kuti jänuziden mata pagenuziden manpidajiden žilo. Om erigoittud municipalitetaks vspäi 1990. Šingotihe teravas vn 2004 [[Olimpižed vändod|Olimpižiden vändoiden]] vaumičendan aigan.
 
 Vrilissijan ižandusen päsarakod oma meblin i sobiden tehmine, mramoran mönd, turizm (kezafestivalid).
 
+== Geografijan andmused ==
 Lidn sijadase Penteliko-mägenno, 245..310 m korktusil, 250 m ü.m.t. keskmäižel korktusel. Matkad Afinoiden keskushesai om 10 km suvipäivlaskmha.
 
 Vn 2011 Grekanman rahvahanlugemižen mödhe municipalitetan eläjiden lugu oli 30 741 ristitud, vl 1991 — 16 571 ristitud.
