/* Rusttha mujuhu sidodud vepsän muštatišed da ozoitesed */

--- a/Rusked_muju.mw
+++ b/Rusked_muju.mw
@@ -110,7 +110,7 @@ Fail:Sunset Starnberger See.jpg|[[Päiväine|Päiväižen]] [[laskm]]
 * [[Rusked meri]]
 * [[Rusked torg]] Moskvas
 
-== Rusttha mujuhu sidodud vepsän muštatišed da ozoitesed ==
+== Rusttha mujuhu sidodud vepsän muštatiž da ozoitez ==
 === Muštatiž ===
 <blockquote>
 * ''Pahk — se-žo nahk, vaiše rusktembahk.''
@@ -118,7 +118,7 @@ Fail:Sunset Starnberger See.jpg|[[Päiväine|Päiväižen]] [[laskm]]
 
 === Ozoitez ===
 <blockquote>
-Rusked korend päliči joges rippub (jumalanbembel').
+* Rusked korend päliči joges rippub. (jumalanbembel')
 </blockquote>
 
 == Homaičendad ==
