/* Jumalanbemblehe sidotud vepsän ozoitesed */

--- a/Jumalanbembel'.mw
+++ b/Jumalanbembel'.mw
@@ -4,9 +4,9 @@
 
 Toižed nimed: ''kareg'', ''jumalanheboine'', ''kolijanbembel<nowiki>'</nowiki>'', (runoištos) ''kiroi-karoi'',  ''vezikar''', (runoištos, lapseline) ''orei-karei''.
 
-== Jumalanbemblehe sidotud vepsän ozoitesed ==
+== Jumalanbemblehe sidodud vepsän ozoitez ==
 <blockquote>
-Rusked korend päliči joges rippub (jumalanbembel').
+* Rusked korend päliči joges rippub. (jumalanbembel')
 </blockquote>
 
 == Kacu mugažo ==
