--- a/Puzu.mw
+++ b/Puzu.mw
@@ -6,7 +6,7 @@
 * ''Počepk'' — puzun varz' (pang), [[raid]]aižes padimespäi tobjimalaz.
 * ''Pohj''.
 
-== Puzhu sidotud vepsän tärtused ==
+== Puzhu sidodud vepsän tärtused ==
 * ''Čunz'puzuine'' — kalatajan puzik [[šot]]uid panemha.
 * ''Komšuine'' — [[toh'|tohne]] puzik.
 * ''Koškpuzu'' — sur' puzu südäivarzidenke koškud vai atavod tomha.
@@ -17,16 +17,16 @@
 * ''Puzunik'' — puzuiden tegii.
 * ''Puzuvac'' — bröngvac, ristit suren vacanke.
 
-== Puzhu sidotud vepsän muštatišed da ozoitesed ==
+== Puzhu sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Elo meleta kuti puzu reigunke.''
 * ''Eraz eläb ku puzhu paneb, a toine eläb ku märgan mecan poltab.''
 </blockquote>
 
-=== Ozoitesed ===
+=== Ozoitez ===
 <blockquote>
-Täuz' puzuine käbedoid kuldaižid munaižid (hiled padas).
+* Täuz' puzuine käbedoid kuldaižid munaižid. (hiled padas)
 </blockquote>
 
 == Galerei ==
