--- a/Puzu.mw
+++ b/Puzu.mw
@@ -30,15 +30,13 @@
 </blockquote>
 
 == Galerei ==
-<center>
-<gallery>
-Fail:Visserijmuseum048.jpg|Koškpuzu [[maim]]anke,<br />[[Bel'gii]]
-Fail:Korb1.JPG|Puzuiden lauk,<br />[[Saksanma]]
-Fail:Drovnica.jpg|Puzu haugoid tomha
-Fail:Basket-wood.JPG|Mülütimed puzulahkospäi<br />(lastaspäi), [[Vaugedvenäma]]
-Fail:Baskets four styles.jpg|Nellän stilin puzud
+<gallery mode="packed" heights="125px">
+Visserijmuseum048.jpg|Koškpuzu [[maim]]anke,<br />[[Bel'gii]]
+Korb1.JPG|Puzuiden lauk,<br />[[Saksanma]]
+Drovnica.jpg|Puzu haugoid tomha
+Basket-wood.JPG|Mülütimed puzulahkospäi<br />(lastaspäi), [[Vaugedvenäma]]
+Baskets four styles.jpg|Nellän stilin puzud
 </gallery>
-</center>
 
 == Kacu mugažo ==
 * [[Kašal']] ([[Merš]])
