/* Sömhä sidodud vepsän muštatišed */ + ozoitez

--- a/Söm.mw
+++ b/Söm.mw
@@ -11,7 +11,8 @@ Jagadas sömid augotižlibundan mödhe: [[kazmused|kazmusišpäi]] i [[živatad|
 
 Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid, fizižid redustoitajid substancijoid, kucujid läžundoid mikroorganizmoid (bakterijad, parazitad, virusad). Joga sömäl kožundan strok om olmas.
 
-== Sömhä sidodud vepsän muštatišed ==
+== Sömhä sidodud vepsän muštatišed da ozoitesed ==
+;Muštatišed
 <blockquote>
 * ''Andoi jumal sun, andab sömäd-ki (supalan-ki).''
 * ''Ei i car' kuldad sö.''
@@ -41,6 +42,11 @@ Sömän korged lad om tarbhaine. Varuitoi söm ei mülü toksinoid, pesticidoid,
 * ''Söm mehen kandišeb.''
 * ''Sömäta joksed läbi pöudos, a alasti ei sa.''
 * ''Tämbäi ed sö tulebid leibid.''
+</blockquote>
+
+;Ozoitez
+<blockquote>
+* Söb, söb, ei voi kül'düda. (lämoi)
 </blockquote>
 
 == Homaičendad ==
