--- a/Novokuzneck.mw
+++ b/Novokuzneck.mw
@@ -1,12 +1,12 @@
 {{Eländpunkt
  | Nimi = Novokuzneck<br />Новокузнецк
- | Lidnanznam = Wapen Novokoeznetsk.png
- | Flag = Flag of Novokuznetsk (Kemerovo oblast) (celebratory).png
+ | Lidnanznam = Герб Новокузнецка 2018.png
+ | Flag = Flag of Novokuznetsk.png
  | Lidnanznam text = Novokuzneckan lidnanznam
  | Flag text = Novokuzneckan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 552,445
- | Voz' = 2017
+ | Eläjiden lugu = 544,583
+ | Voz' = 2021
  | Pind = 424.27
  | Fail = Новокузнецк Коллаж.jpg
  | Pämez' = Sergei Kuznecov<br />(kezaku 2013—)
@@ -14,6 +14,7 @@
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
+[[Fail:Areanvkz.jpg|thumb|left|200px|Lidnan rajonad:<br/>{{legend|aqua|Tegimiden rajon}} {{legend|green|Kuzneckan rajon}} {{legend|red|Kuibiševan rajon}} {{legend|purple|Novoil'jinskii rajon (vspäi 1998)}} {{legend|orange|Ordžonikidzen rajon}} {{legend|blue|Keskuzrajon}}]]
 '''Novokuzneck''' ({{lang-ru|Новокузнецк}}, sijaline oficialižetoi ''Kuzn' '', {{lang-ru|Кузня}}) om [[Venäma]]n lidn da lidnümbrik [[Kemerovon agj]]an suvipalas. Se om agjan ühtenz' lidn pindan mödhe i kahtenz' lidn eläjiden lugun mödhe ([[Kemerovo]]n jäl'ghe), mugažo om [[Novokuzneckan rajon]]an administrativižeks keskuseks.
 
 == Istorii ==
@@ -21,19 +22,36 @@ Eländpunktan aluz om pandud vl 1618 kuti ''Kuzneckan lidnuz'' ({{lang-ru|Куз
 
 Vspäi 1929 zavottihe sauda metallurgišt tegint i panihe ''Sad-lidn-žilod'' senno. Vn 1931 kombinat radaškanzi sijaližel torhudel (raudkivend [[Taštagol]]aspäi 160 km suvhe, pästab rel'soid), i 3. päiväl heinkud kätihe žilod ''Novokuzneck-lidnaks''. Vn 1932 joksten ühtištuihe lidnoid, vhesai 1962 nimitihe ''Stalinsk:aks'', sid' nügüdläižikš. Vspäi 1964 toine metallurgine Päivlaskmaižen Sibirin kombinat om saudud (koks, vanund), vspäi 2011 vanh kombinat mülüb sihe.
 
-Lidn šingotase [[kivihil'|kivihilen]] samižel (kaivuded i kar'jerad, 7 kompanijad) i energijan tehmižel, [[raud]]an, sen ühthesuladusiden i [[alüminii|alüminijan]] metallurgijal, mašiništonsauvomižel i sömtegimištol, mugažo cementtegim i londuseližen gazan nozoltusen tegim ratas.
+Novokuzneck šingotase [[kivihil'|kivihilen]] samižel (kaivuded i kar'jerad, seičeme kompanijad) i energijan tehmižel, [[raud]]an, sen ühthesuladusiden i [[alüminii|alüminijan]] metallurgijal, mašiništonsauvomižel i sömtegimištol, mugažo cementtegim i londuseližen gazan nozoltusen tegim ratas.
 
 == Geografijan andmused ==
 Lidn sijadase Kondom-jogen ({{lang-ru|Кондома}}) lanktendan [[Tom' (Obin ližajogi)|Tomihe]] randoil ([[Ob' (jogi)|Obin]] oigedpol'ne bassein), 192..445 m ü.m.t. korktusil. Matkad [[Kemerovo]]hosai om 188 km lodeheze-pohjoižhe orhal, 218 km avtol vai raudtedme. Lähembaižed lidnad oma [[Osinniki]] 7 km suvhe i [[Prokopjevsk]] 10 km lodeheze orhal sen röunhasai.
 
-Klimat om [[ven vö|ven]] kontinentaline. Voib olda manrehkaidusid 6 ballhasai.
+Klimat om [[ven vö|ven]] kontinentaline. Voib olda manrehkaidusid kudhe ballhasai.
 
-Novokuzneck om lidnümbrikon üks'jäine eländpunkt. Lidn jagase kudhe administrativiž-territorialižhe rajonha, ned ei olgoi municipaližikš ühtnikoikš: Tegimiden, Kuzneckan, Kuibiševan, Novoil'jinskii (vspäi 1998), Ordžonikidzen i Keskuzrajon.
+Novokuzneck om lidnümbrikon üks'jäine eländpunkt. Lidn jagase kudeks administrativiž-territorialižeks rajonaks, ned ei olgoi municipaližikš ühtnikoikš: Tegimiden, Kuzneckan, Kuibiševan, Novoil'jinskii (vspäi 1998), Ordžonikidzen i Keskuzrajon.
 
 == Eläjad ==
 Vn 2010 Venäman rahvahanlugemižen mödhe eläjiden lugu oli 547 904 ristitud. Kaikiš suremb ristitišt oli 602 tuh. eläjid vl 1991.
 
 Rahvahad (enamba 0,3% vl 2010): [[venälaižed]] — 92,4%, [[totarlaižed]] — 0,9%, [[ukrainalaižed]] — 0,9%, [[saksalaižed]] — 0,6%, [[tadžikalaižed]] — 0,5%, [[azerbaidžanlaižed]] — 0,4%, [[armenijalaižed]] — 0,3%, [[šorijalaižed]] — 0,3%, toižed rahvahad — 1,6%, rahvahuden ozutandata — 2,1%.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Tsentralnyy rayon, Novokuznetsk, Kemerovskaya oblast', Russia - panoramio (7).jpg|Lidnan tobmuden aluzkundoiden sauvuz (2009)
+Спасо-Преображенский собор (rgfoto).jpg|Spasan Toižetamižen päjumalanpert' (ortodoksine hristanuskond), vn 2014 nägu
+Католический Храм св.Иоанна Златоуста.jpg|Ph. Ioann Kuldansun pühäpert' (katoline jumalankodikund), vn 2010 nägu
+West Siberian Metal Plant (ZSMK) - panoramio.jpg|Päivlaskmaižsibirin metallurgine kombinat vl 2011
+Kmk1.JPG|Kuzneckan metallurgižen tegimen kontor vl 2005
+Общий вид ГТЭС Новокузнецкая.jpg|Novokuzneckan GTEK (elektrostancii) vl 2014
+Novokuznetsk Южкузбассуголь 001.JPG|Južkuzbassugol'-kompanijan kontor vl 2007
+Новокузнецк, Дворец металлургов, 2.jpg|Metallurgiden kul'turkeskuz (2017)
+Дворец спорта кузнецких металлургов.jpg|Kuzneckan metallurgiden sportpert'kulu (2009)
+Сити Молл.jpg|Siti Moll (2014)
+Spichenkovo Airport.jpg|Novokuzneck-Spičenkovo-lendimportan aerovagzal vl 2013
+Новый вокзал.jpg|Novokuzneck-päraudtestancijan sauvuz vl 2013
+Kuznetsk fortress 005.jpg|Kuzneckan lidnuz (2013)
+</gallery>
 
 == Irdkosketused ==
 * [http://gorsovetnkz.ru/ Lidnan Rahvahan Ezitajiden Nevondkundan oficialine sait (''gorsovetnkz.ru'').] {{ref-ru}}
