*Empty MediaWiki Message*

--- a/Osinniki.mw
+++ b/Osinniki.mw
@@ -15,7 +15,7 @@
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
 [[Fail:Straßenbahn-Ossinniki.png|thumb|left|250px|Lidnan tramvaiteiden kart (2014)]]
-'''Osinniki''' ({{lang-ru|Осинники}} «habikod») om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om Osinnikin lidnümbrikon administrativine keskuz (vspäi 2005).
+'''Osinniki''' ({{lang-ru|Осинники}} «habikod», [[šorijan kel']]: ''Тағдағаал'') om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om Osinnikin lidnümbrikon administrativine keskuz (vspäi 2005).
 
 == Istorii ==
 Osinniki mainitasoiš ezmäižen kerdan Tomskan gubernijan elänzoittud tahoiden nimikirjuteses vl 1859 320 eläjanke, i ezmäižed kaivuded oliba tehtud 19. voz'sadal.
