--- a/Miski.mw
+++ b/Miski.mw
@@ -5,16 +5,16 @@
  | Lidnanznam text = Miskin lidnanznam
  | Flag text = Miskin flag
  | Valdkund = Venäma
- | Eläjiden lugu = 41,628
- | Voz' = 2017
+ | Eläjiden lugu = 40,549
+ | Voz' = 2021
  | Pind = 108.7
  | Fail = Станция Мыски (08.2011) - panoramio.jpg
- | Pämez' = Dmitrii Ivanov<br />(sügüz'ku 2013—)
+ | Pämez' = Jevgenii Timofejev<br />(eloku 2019—)
  | Telefonkod = +7-38474-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Miski''' ({{lang-ru|Мыски}}, [[šorijan kel']]: ''Томазақ'') om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om Miskin lidnümbrikon administrativine keskuz (vspäi 2005).
+'''Miski''' ({{lang-ru|Мыски́}}, [[šorijan kel']]: ''Томазақ'') om [[Venäma]]n lidn [[Kemerovon agj]]an suves. Se om Miskin lidnümbrikon administrativine keskuz (vspäi 2005).
 
 == Istorii ==
 [[Šorijalaižed]] elänzoitiba nenid sijid 1770-nziš vozišpäi i nimitihe ''Tomazak-ulus:aks''. Venäman istoriografijan mödhe eländpunktan aluz om pandud vl 1826 i nimitihe ''Miski-ulus:aks''. Vspäi 1926 Miski oli [[Mägišorijan rahvahaline rajon|Mägišorijan rahvahaližen rajonan]] administrativižen keskusen, vll 1930−1939 — [[Kuzedejevo]]-žilo, sid' tühjitihe rajonad venälaižiden suren lugumäran sirdmižen tagut otmaha agjad kävutamižhe tegimištol. Kätihe radnikžiloks vl 1949. Se sai lidnan statusad vn 1956 8. päiväl semendkud. Tom'-Usinskai GRES om saudud vll 1953−1965, radab alasortun hilel.
@@ -27,9 +27,16 @@ Lidn sijadase ülüdel («nemel»), Mras-Su-jogen hural randal tobjimalaz, kahte
 14 pen't žilod mülüdas lidnümbrikho Miskin ližaks. Lidnümbrikon pind — 728,53 km².
 
 == Eläjad ==
-Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 43 038 ristitud, lidnümbrikon — 45 375 ristitud. Kaikiš suremb lidnan ristitišt oli 48 600 eläjad vl 1996. Vl 2018 kaik 43 519 ristitud elädas lidnümbrikos. [[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid om olmas lidnas.
+Vn 2010 Venäman rahvahanlugemižen mödhe lidnan eläjiden lugu oli 43 038 ristitud, lidnümbrikon — 45 375 ristitud. Kaikiš suremb lidnan ristitišt oli 48 600 eläjad vl 1996. Vl 2018 kaik 43 519 ristitud elihe lidnümbrikos.
 
-Tom'-Usinskii energotransportine tehnikum om professionaližen opendusen aluzkundaks.
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid<ref>[http://sobory.ru/geo/locat/14866 Miskin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> oma olmas lidnas: Jumalanmaman «Odigitrija»-jumalaižen (om saudud vl 1999−2001), ph. Ondrii Ezikuctud (2004) i ph. Serafim Sarovalaižen.
+
+Tom'-Usinskii energotransportine tehnikum<ref>[http://www.туэтт.рф/ Tom'-Usinskii energotransportižen tehnikuman sait (''туэтт.рф'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Dmitrii Ivanov (sügüz'ku 2013 — kezaku 2019).
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://www.myski-sovet.ru/ Lidnümbrikon Rahvahan Ezitajiden Nevondkundan oficialine sait (''myski-sovet.ru'').] {{ref-ru}}
