+ galerei, +hom, aktualizacii

--- a/Anžero-Sudžensk.mw
+++ b/Anžero-Sudžensk.mw
@@ -5,21 +5,21 @@
  | Lidnanznam text = Anžero-Sudženskan lidnanznam
  | Flag text = Anžero-Sudženskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 71,787
- | Voz' = 2017
+ | Eläjiden lugu = 66,933
+ | Voz' = 2021
  | Pind = 119.2
- | Fail = Здание администрации города Анжеро-Судженска (6).jpg
- | Pämez' = Dmitrii Ažičakov<br />(kül'mku 2016—)
+ | Fail = Анжеро-Судженск, памятник погибшим за советскую власть.jpg
+ | Pämez' = Aleksandr Ribalko<br />(tal'vku 2019—)
  | Telefonkod = +7-38453-xx-xxx
  | Avtokod = 42. 142
  | Aigvö = [[UTC]]+7 ([[MSK]]+4)
 }}
-'''Anžero-Sudžensk''' ({{lang-ru|Анжеро-Судженск}}) om [[Venäma]]n lidn da lidnümbrik [[Kemerovon agj]]an pohjoižes. Se om agjan ühesanz' lidn eläjiden lugun mödhe.
+'''Anžero-Sudžensk''' ({{lang-ru|Анже́ро-Су́дженск}}) om [[Venäma]]n lidn da lidnümbrik [[Kemerovon agj]]an pohjoižes. Se om agjan ühesanz' lidn eläjiden lugun mödhe.
 
 == Istorii ==
 Eländpunktan aluz om pandud radinžiloks vl 1928 Anžerk- ({{lang-ru|Анжерка}}) da Surženk- ({{lang-ru|Сурженка}}) kaivuzžiloišpäi. Anžerk-žilo oli nimitadud Anžer-jogen mödhe, i Surženk-žilon nimi oli anttud tulijoil [[Kurskan gubernii|Kurskan gubernijaspäi]], kus Sudž-jogi da [[Sudž]]-lidn oma olmas. Anžero-Sudžensk sai lidnan statusad vl 1931.
 
-Lidn om [[Kuzneckan hil'bassein|Kuzbassan]] hilen samižen ühteks keskusišpäi tähäsai.
+Lidn om [[Kuzneckan hil'bassein|Kuzbassan]] [[hil'|hilen]] samižen ühteks keskusišpäi tähäsai.
 
 == Geografijan andmused ==
 Lidn sijadase [[Kuzneckan katl'uz|Kuzneckan katl'uses]], 230 m ü.m.t. keskmäižel korktusel. Matkad [[Kemerovo]]späi om 115 kilometrad pohjoižpolehe. [[Transsibirin magistral'|Transsib-raudte]] läbitab lidnad.
@@ -38,7 +38,16 @@ Lidnanvuitte Rudničnii-žilo (3752 rist. vl 2017) da seičeme muite žilod mül
 
 Kaikiš suremb lidnan ristitišt oli 120 tuhad eläjid vl 1962. Lidnümbrikon ristitišt oli 82 497 eläjad vl 2010 i 77 666 eläjad vl 2017.
 
-Professionaližen opendusen aluzkundad: kaivuztehnikum, pedagogine i politehnine kolledžad, Kemerovon agjan medicinižen kolledžan filial.
+Professionaližen opendusen aluzkundad: kaivuztehnikum<ref>[http://www.a-sgt.ru/ Anžero-Sudženskan kaivuztehnikuman sait (''a-sgt.ru'').] {{ref-ru}}</ref>, pedagogine i politehnine kolledžad, Kemerovon agjan medicinižen kolledžan filial.
+
+Edeline lidnümbrikon pämez' om Dmitrii Ažičakov (kül'mku 2016 — reduku 2019).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Здание администрации города Анжеро-Судженска (1).jpg|Lidnan administracijan sauvuz (2013)
+Парк Победы2.jpg|Vägestusen puišt i muštnik pölištunuzile sodamehile [[Sur' Tatanmaine soda|Suren sodan]] aigan (2018)
+НМБОУ Гимназия №11.jpg|Gimnazii nomer 11 (2018, škol om saudud N.K. Krupskajan iniciativan mödhe)
+</gallery>
 
 == Homaičendad ==
 <references />
