--- a/Käzi.mw
+++ b/Käzi.mw
@@ -27,7 +27,7 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 == Kut päaivod ohjastadas käzil ==
 [[Päaivoiden kor']] kogoneb severziš-se tahoišpäi, ned ohjatas hibjan paloil eriži. Tahod kuvadasoiš gomunkulusan nägul paksus. Gomunkulus — se om tehtud meles venui korel kuvatud penikaine ristit. Sen jaugad sijadasoiš dorsaližikš (pälagele lähemba), i sen käded da mod oma ventraližikš (pän laptas). Ned sijadasoiš mugoižes järgenduses: hibj, käzi, mod. Gomunkulusal oma sur' kämen' da surenzoittud sor'med, pen' oug. Päaivoiden kores om äi mugoižid gomunkulusoid, kaikuččes specializiruidud tahos.
 
-== Kädehe sidotud vepsän muštatišed da ozoitesed ==
+== Kädehe sidodud vepsän muštatišed da ozoitesed ==
 === Muštatišed ===
 <blockquote>
 * ''Ei niken sündu kirvez kädes.''
@@ -41,9 +41,9 @@ Sikš ku käzivarz' enamb toižid elimid tegeb ristitun elonradmižen aigan, ka 
 * ''Ühtel kädel droči, toižel lö.''
 </blockquote>
 
-=== Ozoitesed ===
+=== Ozoitez ===
 <blockquote>
-Kaikile kät andab (kägä).
+* Kaikile kät andab. (kägä)
 </blockquote>
 
 == Kelenvänd ==
