--- a/Tullei.mw
+++ b/Tullei.mw
@@ -5,19 +5,25 @@
 
 Tulleid erinesoiš vägen mödhe: [[briz]]aspäi [[uragan]]hasai. Kaikenaigaižed kovad tulleid voidas veda surmičijoihe valatoitusihe [[ümbrišt]]os ([[erozii (geologii)|erozijad]] i m. e.).
 
-== Tulleihe sidotud vepsän tärtused ==
+== Tulleihe sidodud vepsän tärtused ==
 * ''Lendandtullei'' — loptuh-läžund.
 * ''Muiged tullei'' — tullei vilunke.
 * ''Tulleikibu'' — läžund tullein rahkoišpäi.
 * ''Tulleipeza'' — kuhmun toižend pus.
 
-== Tulleihe sidotud vepsän muštatišed ==
+== Tulleihe sidodud vepsän muštatišed da ozoitesed ==
+;Muštatišed
 <blockquote>
 * ''Dölota koivuine ei koiverdelde.''
 * ''Koir nutab, tullei kandab.''
 * ''Kuna döl, sinnä i mel'.''
 * ''Pohjoižtulleiš eile lämäd, emindamas eile mamad.''
 * ''Tullei päs käveleb.''
+</blockquote>
+
+;Ozoitez
+<blockquote>
+* Vellen hebošt ei voi tabata, sizaren laudruzuid ei voi kerata. (ahav da taivaz)
 </blockquote>
 
 == Kacu mugažo ==
