--- a/Pedai.mw
+++ b/Pedai.mw
@@ -28,7 +28,7 @@ Sädab [[mec]]oid, no voib kazda üks'jäižen-ki. Pedai navedib [[letked|letema
 == Kävutand ==
 Ottas kävutamižhe [[pu (material)|pumaterialaks]] levedali: kogonaižed parded, tehmaha lahkoid, laivoiden i lendimiden paloikš, torhuz cellülozbumagaižen tegimišton täht, kaivuztüged, pakuitez.
 
-== Pedajaha sidotud vepsän tärtused ==
+== Pedajaha sidodud vepsän tärtused ==
 * ''Hong'' — kuiv pedai.
 * ''Hongišt, hongžom'' — hongasine mec.
 * ''Mänd'' — pedajan pind vai pedajišt [[so]]s.
@@ -37,9 +37,9 @@ Ottas kävutamižhe [[pu (material)|pumaterialaks]] levedali: kogonaižed parded
 * ''Solätik'' — mectunu pedajil soröun.
 * ''Somändik'' — so pedajidenke.
 
-== Pedajaha sidotud vepsän ozoitez ==
+== Pedajaha sidodud vepsän ozoitez ==
 <blockquote>
-Mecas koume mechašt, kezal i tal'vel ühted sädod (''hong, kuz' da kadag'').
+* Mecas koume mechašt, kezal i tal'vel ühted sädod. (hong, kuz' da kadag)
 </blockquote>
 
 == Homaičendad ==
